--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "通用Web代理 (Node Unblocker)",
-  "description": "基于Node-Unblocker的Web代理，轻松翻墙看世界",
+  "name": "通用Web代理 (node)",
+  "description": "基于node的Web",
   "image": "heroku/nodejs",
-  "repository": "https://github.com/gfw-breaker/heroku-node-proxy",
-  "keywords": ["node-noblocker", "gfw-breaker"],
-  "website": "https://github.com/gfw-breaker"
+  "repository": "https://github.com/boy12371/heroku-node-proxy",
+  "keywords": ["node"],
+  "website": "https://github.com"
 }
